# Hackathon-backend

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  deploy_to_testnet.sh  direct_testnet_deploy.sh  export_wallet_for_ui.js  package-lock.json  package.json  persistent_deploy.sh  run-gui-and-test.sh  run_test.sh  run_tests_direct.sh
flash-loan-ui/: README.md  config-overrides.js  package-lock.json  package.json
flash-loan-ui/public/: index.html
flash-loan-ui/src/: App.js  idl.json
flash-loan-ui/src/utils/: wallet.js
flash_loan_arbitrage/src/: lib.rs
programs/flash_loan_arbitrage/: Cargo.toml
programs/flash_loan_arbitrage/src/: lib.rs
programs/flash_loan_arbitrage/src/instructions/: flash_loan.rs
programs/flash_loan_arbitrage/src/state/: accounts.rs  errors.rs  mod.rs
scripts/: run_simulation.js
src/: accounts.rs  errors.rs  lib.rs
src/instructions/: flash_loan.rs  mod.rs
tests/: flash_loan_arbitrage.ts
