[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Allow large stack frames for all programs in the workspace
[profile.release.package.flash_loan_arbitrage_program]
codegen-units = 1
incremental = false
debug = false

[workspace.metadata.solana]
allow-large-stack-frames = true 