[package]
name = "flash_loan_arbitrage_program"
version = "0.1.0"
description = "Solana flash loan arbitrage smart contract using Anchor"
edition = "2021"
resolver = "2"

[lib]
name = "flash_loan_arbitrage_program"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
solana-program = "=1.16.0"
thiserror = "1.0.40"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# This is required to handle the stack size error
[package.metadata.solana]
allow-large-stack-frames = true 